apps/hotel-reservation/templates/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hotel-gateway
  namespace: phoenix-app
spec:
  selector:
    istio: ingress # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: phoenix-app
spec:
  hosts:
  - "*"
  gateways:
  - hotel-gateway
  http:
  - match:
    - uri:
        prefix: /api/auth
    route:
    - destination:
        host: identity-service
        port:
          number: 7102
  - match:
    - uri:
        prefix: /api/users
    route:
    - destination:
        host: identity-service
        port:
          number: 7102
  - match:
    - uri:
        prefix: /api/hotels/search
    route:
    - destination:
        host: search-service
        port:
          number: 7105
  - match:
    - uri:
        regex: ^/api/hotels/[^/]+/bookings.*
    route:
    - destination:
        host: booking-service
        port:
          number: 7104
  - match:
    - uri:
        regex: ^/api/hotels/[^/]+/waitlist.*
    route:
    - destination:
        host: booking-service
        port:
          number: 7104
  - match:
    - uri:
        prefix: /api/hotels
    route:
    - destination:
        host: hotel-service
        port:
          number: 7103
  - match:
    - uri:
        prefix: /api/bookings
    route:
    - destination:
        host: booking-service
        port:
          number: 7104
  - match:
    - uri:
        prefix: /api/my-bookings
    route:
    - destination:
        host: booking-service
        port:
          number: 7104
  - match:
    - uri:
        prefix: /api/notifications
    route:
    - destination:
        host: notification-service
        port:
          number: 7101
  - match:
    - uri:
        prefix: /api/push
    route:
    - destination:
        host: notification-service
        port:
          number: 7101
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
